# LinkedRAG

./: .env.example  .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md  sample_linkedin_connections.csv  test_connections.csv
services/: chatbot.py  data_processor.py  vector_store.py
utils/: helpers.py
