[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "requests>=2.32.3",
]
